Updated hero section to use PNG image

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ footer {
 }
 
 .hero {
-    background-image: url('istockphoto-2020157664-612x612.webp');
+    background-image: url('istockphoto-2020157664-612x612.png');
     background-size: cover;
     background-position: center;
     height: 300px;
